<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_posting_methods"
        android:entryValues="@array/pref_list_posting_methods_values"
        android:key="posting_method"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_posting_method" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_default_posting_tagname"
        android:inputType="text"
        android:key="posting_tagname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_posting_tagname" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_payment_methods"
        android:inputType="text"
        android:key="payment_methods"
        android:maxLines="10"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:title="@string/pref_title_payment_methods" />

    <!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
     -->

</PreferenceScreen>
